--- a/views/login.html
+++ b/views/login.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-        <link rel="stylesheet" href="../lib/css/bootstrap.min.css">
-        <script src="../lib/js/jquery-1.12.4.js"></script>
-        <script src="../lib/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/lib/css/bootstrap.min.css">
+        <script src="/lib/js/jquery-1.12.4.js"></script>
+        <script src="/lib/js/bootstrap.min.js"></script>
         <style>
             .container{
                  margin-top:120px;
@@ -44,7 +44,7 @@
                       <input type="text" name="code" class="form-control" id="code" placeholder="请输入验证码">
                     </div>
                     <div class="col-sm-4">
-                      <img class="code-img" src="../img/code.PNG" alt="">
+                      <img class="code-img" src="/login/captchaImg.png" alt="">
                     </div>
                   </div>
                   <div class="form-group">
@@ -62,3 +62,10 @@
     
 </body>
 </html>
+<script>
+   $(function(){
+      $(".code-img").click(function(){
+        $(this).attr('src',$(this).attr("src")+`?${Math.random()}`);
+      })
+   })
+</script>
