--- a/views/update.html
+++ b/views/update.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="../lib/css/bootstrap.min.css">
-    <script src="../lib/js/bootstrap.min.js"></script>
-    <script src="../lib/js/jquery-1.12.4.js"></script>
+    <link rel="stylesheet" href="/lib/css/bootstrap.min.css">
+    <script src="/lib/js/bootstrap.min.js"></script>
+    <script src="/lib/js/jquery-1.12.4.js"></script>
     <style>
 
             .navbar-link.my-logout{
